# loqui-eq-av

./: CMakeLists.txt  Loqui - NMT with Raylib and ImGui.sublime-workspace  Makefile  README.md  build.bat  build.sh  meson.build  project.4coder  raylib.build.mk
includes/: proj_rsrc_ctl.h  src_main.h
src/api/: tweened_spring_enum.c  tweened_spring_enum.h
src/components/: open_plal_p.cpp  open_plal_t.h
src/controllers/dsp/: audio_frame_controller.cpp  audio_frame_controller.h
src/controllers/ui/: hwind_config_impl.cpp  hwind_config_impl.h
src/models/command/: command_base_model.h  command_inputs.h  handler_base_model.h  input_handler.cpp  input_handler.h
src/models/dsp/: biquad_filter.cpp  biquad_filter.h  butterworth_filter.cpp  butterworth_filter.h  butterworth_filter_model.h  envelope_detector.h  envelope_follower.h  generator_waveforms.h  lfo_modulator.h  oscillator_parameter.h  phase_shifter.h  three_band_eq.cpp  three_band_eq.h  triode_class_a.h  two_band_shelf.h  waveshaper.h  zavalishin_filter.h
src/models/dsp/events/: events.h  observer.h  subject.cpp  subject.h
src/models/nmt/: nmt_ffnn.cpp  nmt_ffnn.h  nmt_ffnn_data.h
src/models/ui/: immediate_rgui.cpp  immediate_rgui.h
src/processors/audio/: audio_frame_processor.cpp  audio_frame_processor.h  visual_audio_processor.cpp  visual_audio_processor.h
src/shared/data/: audio_data_types.h  audio_process_data.h  device_config.h  hrtf_process_data.h  sinewave_model.h
src/shared/io/: manage_events_pipe.cpp  normalized_values_converter.cpp  normalized_values_converter.h
(+3 files in other folders)
